[gd_scene load_steps=10 format=4 uid="uid://ctfc378nlnrsy"]

[ext_resource type="Script" uid="uid://cjfvvhd5dbebq" path="res://scripts/main_scene.gd" id="1_pu3yx"]
[ext_resource type="PackedScene" uid="uid://cp6j2eswm0vn1" path="res://scenes/base.tscn" id="3_gubc5"]
[ext_resource type="Script" uid="uid://cwtplco0hlnba" path="res://scripts/ui/ally_spawn_canvas.gd" id="4_gubc5"]
[ext_resource type="PackedScene" uid="uid://dq6e0nvgd0fr4" path="res://scenes/spawn_point.tscn" id="4_pu3yx"]
[ext_resource type="Script" uid="uid://coqvhyfflahm8" path="res://scripts/ui/cost_label.gd" id="6_18nlu"]
[ext_resource type="Script" uid="uid://dbpbfvweqfc8o" path="res://scripts/ui/gold_count_label.gd" id="7_c1pb6"]
[ext_resource type="Texture2D" uid="uid://npmp2gtlhucg" path="res://assets/tileset/Floors_Tiles.png" id="7_c16ls"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_18nlu"]
texture = ExtResource("7_c16ls")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
4:2/0 = 0
5:2/0 = 0
9:2/0 = 0
10:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
13:6/0 = 0
14:6/0 = 0
0:7/0 = 0
4:7/0 = 0
5:7/0 = 0
9:7/0 = 0
10:7/0 = 0
14:7/0 = 0
0:8/0 = 0
1:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0

[sub_resource type="TileSet" id="TileSet_c1pb6"]
sources/0 = SubResource("TileSetAtlasSource_18nlu")

[node name="MainScene" type="Node"]
script = ExtResource("1_pu3yx")

[node name="Base" parent="." instance=ExtResource("3_gubc5")]
position = Vector2(352, 238)

[node name="Camera2D" type="Camera2D" parent="Base"]
zoom = Vector2(2, 2)

[node name="EnemySpawnManager" type="Node2D" parent="."]

[node name="SpawnPoint" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(-13, 381)

[node name="SpawnPoint2" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(-10, 230)

[node name="SpawnPoint3" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(-11, 91)

[node name="SpawnPoint4" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(704, 88)

[node name="SpawnPoint5" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(705, 229)

[node name="SpawnPoint6" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(710, 356)

[node name="SpawnPoint7" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(131, 2)

[node name="SpawnPoint8" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(333, 0)

[node name="SpawnPoint9" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(538, 5)

[node name="SpawnPoint10" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(344, 451)

[node name="SpawnPoint11" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(548, 450)

[node name="SpawnPoint12" parent="EnemySpawnManager" instance=ExtResource("4_pu3yx")]
position = Vector2(132, 454)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AllySpawnCanvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_gubc5")

[node name="TextureRect" type="TextureRect" parent="AllySpawnCanvas"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="CostLabel" type="RichTextLabel" parent="AllySpawnCanvas"]
layout_mode = 0
offset_left = 547.0
offset_top = 85.0
offset_right = 631.0
offset_bottom = 114.0
bbcode_enabled = true
horizontal_alignment = 2
script = ExtResource("6_18nlu")

[node name="GoldCountLabel" type="RichTextLabel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -594.0
offset_top = -274.0
offset_right = -519.0
offset_bottom = -250.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
text = "[font_size='14'][b][color='yellow']500[/color][/b][/font_size]"
horizontal_alignment = 2
script = ExtResource("7_c1pb6")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="TileMapLayer"]
z_index = -1
tile_map_data = PackedByteArray("AAAQABAAAAABAAoAAAAQABEAAAABAAoAAAAQABIAAAABAAoAAAARABIAAAABAAoAAAASABMAAAABAAoAAAATABMAAAACAAoAAAAUABMAAAACAAoAAAAVABMAAAACAAoAAAAWABMAAAACAAoAAAAXABMAAAACAAoAAAAYABMAAAABAAoAAAAZABIAAAABAAoAAAAaABIAAAABAAoAAAAbABEAAAABAAoAAAAcABAAAAABAAoAAAAdAA8AAAABAAoAAAAdAA4AAAABAAoAAAAdAA0AAAABAAoAAAAdAAwAAAABAAoAAAAdAAsAAAACAAoAAAAdAAoAAAACAAoAAAAcAAkAAAACAAoAAAAbAAkAAAACAAoAAAAaAAkAAAACAAoAAAAZAAkAAAACAAoAAAAYAAkAAAACAAoAAAAXAAkAAAACAAoAAAAWAAkAAAACAAoAAAAVAAkAAAACAAoAAAAUAAoAAAACAAoAAAATAAoAAAACAAoAAAASAAsAAAACAAoAAAARAAsAAAACAAoAAAAQAAwAAAABAAoAAAAPAA0AAAABAAoAAAAOAA0AAAABAAoAAAANAA4AAAABAAoAAAAMAA4AAAABAAoAAAALAA8AAAABAAoAAAAKAA8AAAABAAoAAAAQAA8AAAADAAoAAAAPAA8AAAADAAoAAAAPABAAAAADAAoAAAAOABAAAAADAAoAAAAOABEAAAABAAoAAAAPABEAAAABAAoAAAAPABIAAAABAAoAAAAOAA8AAAADAAoAAAANABAAAAABAAoAAAANABEAAAABAAoAAAAPAA4AAAADAAoAAAANAA8AAAABAAoAAAAMABEAAAABAAoAAAALABEAAAABAAoAAAAKABEAAAABAAoAAAAMABAAAAADAAoAAAAQAA4AAAABAAoAAAARAA0AAAABAAoAAAASAA0AAAADAAoAAAATAA0AAAADAAoAAAASAA4AAAABAAoAAAASAA8AAAABAAoAAAARAA8AAAABAAoAAAANABIAAAABAAoAAAALAA4AAAABAAoAAAAMAA0AAAABAAoAAAANAA0AAAABAAoAAAAOAAwAAAABAAoAAAAPAAwAAAABAAoAAAAMAA8AAAABAAoAAAAOAA4AAAABAAoAAAAQAA0AAAABAAoAAAARAAwAAAABAAoAAAANAAwAAAABAAoAAAAMABIAAAABAAoAAAALABAAAAABAAoAAAAJABAAAAABAAoAAAAJABEAAAABAAoAAAAKABAAAAABAAoAAAALAA0AAAABAAoAAAAMAAwAAAABAAoAAAAOABIAAAABAAoAAAALABIAAAABAAoAAAASABEAAAABAAoAAAASABAAAAABAAoAAAATABAAAAABAAoAAAAUAA8AAAABAAoAAAAVAA8AAAABAAoAAAAWAA8AAAABAAoAAAAXAA8AAAABAAoAAAAYAA8AAAABAAoAAAAXAA4AAAABAAoAAAAWAA4AAAABAAoAAAAVAA4AAAABAAoAAAAUAA4AAAABAAoAAAATAA4AAAABAAoAAAAYAA4AAAABAAoAAAAZAA0AAAABAAoAAAAaAA0AAAABAAoAAAAYAA0AAAABAAoAAAARAA4AAAABAAoAAAASAAwAAAABAAoAAAATAAwAAAABAAoAAAAUAAwAAAABAAoAAAAVAAwAAAABAAoAAAAWAAsAAAABAAoAAAAXAAsAAAABAAoAAAAYAAsAAAABAAoAAAAZAAsAAAABAAoAAAAZAAwAAAABAAoAAAAUABAAAAABAAoAAAARABAAAAABAAoAAAAWAA0AAAABAAoAAAATAA8AAAABAAoAAAAXAA0AAAABAAoAAAATABEAAAABAAoAAAARABEAAAABAAoAAAAUAA0AAAABAAoAAAAWAAwAAAABAAoAAAAVAA0AAAABAAoAAAAXAAwAAAABAAoAAAAYAAwAAAABAAoAAAASABIAAAABAAoAAAATABIAAAABAAoAAAAUABIAAAABAAoAAAAVABIAAAABAAoAAAAWABIAAAABAAoAAAAXABIAAAABAAoAAAAYABEAAAABAAoAAAAZABEAAAABAAoAAAAaABEAAAABAAoAAAAdABAAAAABAAoAAAAeABAAAAABAAoAAAAfABAAAAABAAoAAAAcABEAAAABAAoAAAAXABEAAAABAAoAAAAWABEAAAABAAoAAAAUABEAAAABAAoAAAAVABEAAAABAAoAAAAWABAAAAABAAoAAAAXABAAAAABAAoAAAAYABAAAAABAAoAAAAZABAAAAABAAoAAAAaAA8AAAABAAoAAAAbAA8AAAABAAoAAAAcAA8AAAABAAoAAAAbABAAAAABAAoAAAAaABAAAAABAAoAAAAVABAAAAABAAoAAAAZAA8AAAABAAoAAAAZABMAAAABAAoAAAAaAA4AAAABAAoAAAAbAA4AAAABAAoAAAAYABIAAAABAAoAAAAbAA0AAAABAAoAAAAbAAwAAAABAAoAAAAcAAwAAAABAAoAAAAcAAsAAAABAAoAAAAZAA4AAAABAAoAAAAcAA0AAAABAAoAAAAeAAwAAAABAAoAAAAeAA0AAAABAAoAAAAeAA4AAAABAAoAAAAfAA4AAAABAAoAAAAfAA8AAAABAAoAAAAfABEAAAABAAoAAAAfABIAAAABAAoAAAAfABMAAAABAAoAAAAWABgAAAABAAoAAAAXABgAAAABAAoAAAAYABgAAAABAAoAAAAZABgAAAABAAoAAAAaABgAAAABAAoAAAAbABgAAAABAAoAAAAcABgAAAABAAoAAAAdABgAAAABAAoAAAAeABgAAAABAAoAAAAfABgAAAABAAoAAAAgABgAAAABAAoAAAAhABgAAAABAAoAAAAiABgAAAABAAoAAAAjABgAAAABAAoAAAAkABgAAAABAAoAAAAlABgAAAABAAoAAAAmABgAAAABAAoAAAAnABgAAAABAAoAAAAnABcAAAABAAoAAAAnABYAAAABAAoAAAAnABUAAAABAAoAAAAnABQAAAABAAoAAAAnABMAAAABAAoAAAAnABIAAAABAAoAAAAnABEAAAABAAoAAAAnABAAAAABAAoAAAAnAA8AAAABAAoAAAAnAA4AAAABAAoAAAAnAA0AAAABAAoAAAAnAAwAAAABAAoAAAAnAAsAAAABAAoAAAAnAAoAAAABAAoAAAAnAAkAAAABAAoAAAAnAAUAAAABAAoAAAAnAAYAAAABAAoAAAAnAAcAAAABAAoAAAAnAAgAAAABAAoAAAADAAQAAAABAAoAAAAEAAQAAAABAAoAAAAFAAQAAAABAAoAAAAGAAQAAAABAAoAAAAHAAQAAAABAAoAAAAIAAQAAAABAAoAAAAJAAQAAAABAAoAAAAKAAQAAAABAAoAAAALAAQAAAABAAoAAAAMAAQAAAABAAoAAAANAAQAAAABAAoAAAAOAAQAAAABAAoAAAAPAAQAAAABAAoAAAAQAAQAAAABAAoAAAARAAQAAAABAAoAAAASAAQAAAABAAoAAAATAAQAAAABAAoAAAAUAAQAAAABAAoAAAAVAAQAAAABAAoAAAAWAAQAAAABAAoAAAAXAAQAAAABAAoAAAAYAAQAAAABAAoAAAAZAAQAAAABAAoAAAAaAAQAAAABAAoAAAAbAAQAAAABAAoAAAAcAAQAAAABAAoAAAAdAAQAAAABAAoAAAAeAAQAAAABAAoAAAAfAAQAAAABAAoAAAAgAAQAAAABAAoAAAAhAAQAAAABAAoAAAAiAAQAAAABAAoAAAAjAAQAAAABAAoAAAAkAAQAAAABAAoAAAAlAAQAAAABAAoAAAAmAAQAAAABAAoAAAAnAAQAAAABAAoAAAAVABgAAAABAAoAAAAUABgAAAABAAoAAAATABgAAAABAAoAAAASABgAAAABAAoAAAARABgAAAABAAoAAAAQABgAAAABAAoAAAAPABgAAAABAAoAAAAOABgAAAABAAoAAAANABgAAAABAAoAAAAMABgAAAABAAoAAAALABgAAAABAAoAAAAKABgAAAABAAoAAAAJABgAAAABAAoAAAAIABgAAAABAAoAAAAHABgAAAABAAoAAAAGABgAAAABAAoAAAAFABgAAAABAAoAAAAEABgAAAABAAoAAAADABgAAAABAAoAAAADAAUAAAABAAoAAAADAAYAAAABAAoAAAADAAcAAAABAAoAAAADAAgAAAABAAoAAAADAAkAAAABAAoAAAADAAoAAAABAAoAAAADAAsAAAABAAoAAAADAAwAAAABAAoAAAADAA0AAAABAAoAAAADAA4AAAABAAoAAAADAA8AAAABAAoAAAADABAAAAABAAoAAAADABEAAAABAAoAAAADABIAAAABAAoAAAADABMAAAABAAoAAAADABQAAAABAAoAAAADABUAAAABAAoAAAADABYAAAABAAoAAAADABcAAAABAAoAAAAEABcAAAABAAoAAAAEABYAAAABAAoAAAAEABUAAAABAAoAAAAEABQAAAABAAoAAAAEABMAAAABAAoAAAAEABIAAAABAAoAAAAEABEAAAABAAoAAAAEABAAAAABAAoAAAAEAA8AAAABAAoAAAAEAA4AAAABAAoAAAAEAA0AAAABAAoAAAAEAAwAAAABAAoAAAAEAAsAAAABAAoAAAAEAAoAAAABAAoAAAAEAAkAAAABAAoAAAAEAAgAAAABAAoAAAAEAAcAAAABAAoAAAAEAAYAAAABAAoAAAAEAAUAAAABAAoAAAAHAAwAAAABAAoAAAAHAAsAAAABAAoAAAAHAAoAAAABAAoAAAAHAAkAAAABAAoAAAAHAAgAAAABAAoAAAAHAAcAAAABAAoAAAAHAAYAAAABAAoAAAAHAAUAAAABAAoAAAAGAAUAAAABAAoAAAAFAAUAAAABAAoAAAAFAAYAAAABAAoAAAAFAAcAAAABAAoAAAAFAAgAAAABAAoAAAAFAAkAAAABAAoAAAAFAAoAAAABAAoAAAAFAAsAAAABAAoAAAAFAAwAAAABAAoAAAAFAA0AAAABAAoAAAAFAA4AAAABAAoAAAAFAA8AAAABAAoAAAAFABAAAAABAAoAAAAFABEAAAABAAoAAAAFABIAAAABAAoAAAAFABMAAAABAAoAAAAFABQAAAABAAoAAAAFABUAAAABAAoAAAAFABYAAAABAAoAAAAFABcAAAABAAoAAAAGABcAAAABAAoAAAAGABYAAAABAAoAAAAGABUAAAABAAoAAAAGABQAAAABAAoAAAAGABMAAAABAAoAAAAGABIAAAABAAoAAAAGABEAAAABAAoAAAAGABAAAAABAAoAAAAGAA8AAAABAAoAAAAGAA4AAAABAAoAAAAGAA0AAAABAAoAAAAGAAwAAAABAAoAAAAGAAsAAAABAAoAAAAGAAoAAAABAAoAAAAGAAkAAAABAAoAAAAGAAgAAAABAAoAAAAGAAcAAAABAAoAAAAGAAYAAAABAAoAAAAHAA0AAAABAAoAAAAHAA4AAAABAAoAAAAHAA8AAAABAAoAAAAHABAAAAABAAoAAAAHABEAAAABAAoAAAAHABIAAAABAAoAAAAHABMAAAABAAoAAAAHABQAAAABAAoAAAAHABUAAAABAAoAAAAHABYAAAABAAoAAAAHABcAAAABAAoAAAAIABcAAAABAAoAAAAIABYAAAABAAoAAAAIABUAAAABAAoAAAAIABQAAAABAAoAAAAIABMAAAABAAoAAAAIABIAAAABAAoAAAAIABEAAAABAAoAAAAIABAAAAABAAoAAAAIAA8AAAABAAoAAAAIAA4AAAABAAoAAAAIAA0AAAABAAoAAAAIAAwAAAABAAoAAAAIAAsAAAABAAoAAAAIAAoAAAABAAoAAAAIAAkAAAABAAoAAAAIAAgAAAABAAoAAAAIAAcAAAABAAoAAAAIAAYAAAABAAoAAAAIAAUAAAABAAoAAAAJAAUAAAABAAoAAAAJAAYAAAABAAoAAAAJAAcAAAABAAoAAAAJAAgAAAABAAoAAAAJAAkAAAABAAoAAAAJAAoAAAABAAoAAAAJAAsAAAABAAoAAAAJAAwAAAABAAoAAAAJAA0AAAABAAoAAAAJAA4AAAABAAoAAAAJAA8AAAABAAoAAAAKAA4AAAABAAoAAAAKAA0AAAABAAoAAAAKAAwAAAABAAoAAAAKAAsAAAABAAoAAAAKAAoAAAABAAoAAAAKAAkAAAABAAoAAAAKAAgAAAABAAoAAAAKAAcAAAABAAoAAAAKAAYAAAABAAoAAAAKAAUAAAABAAoAAAALAAUAAAABAAoAAAALAAYAAAABAAoAAAALAAcAAAABAAoAAAALAAgAAAABAAoAAAALAAkAAAABAAoAAAALAAoAAAABAAoAAAALAAsAAAABAAoAAAALAAwAAAABAAoAAAAMAAsAAAABAAoAAAAMAAoAAAABAAoAAAAMAAkAAAABAAoAAAAMAAgAAAABAAoAAAAMAAcAAAABAAoAAAAMAAYAAAABAAoAAAAMAAUAAAABAAoAAAANAAUAAAABAAoAAAANAAYAAAABAAoAAAANAAcAAAABAAoAAAANAAgAAAABAAoAAAANAAkAAAABAAoAAAANAAoAAAABAAoAAAANAAsAAAABAAoAAAAOAAsAAAABAAoAAAAOAAoAAAABAAoAAAAOAAkAAAABAAoAAAAOAAgAAAABAAoAAAAOAAcAAAABAAoAAAAOAAYAAAABAAoAAAAOAAUAAAABAAoAAAAPAAUAAAABAAoAAAAPAAYAAAABAAoAAAAPAAcAAAABAAoAAAAPAAgAAAABAAoAAAAPAAkAAAABAAoAAAAPAAoAAAABAAoAAAAPAAsAAAABAAoAAAAQAAsAAAABAAoAAAAQAAoAAAABAAoAAAAQAAkAAAABAAoAAAAQAAgAAAABAAoAAAAQAAcAAAABAAoAAAAQAAYAAAABAAoAAAAQAAUAAAABAAoAAAARAAUAAAABAAoAAAARAAYAAAABAAoAAAARAAcAAAABAAoAAAARAAgAAAABAAoAAAARAAkAAAABAAoAAAARAAoAAAABAAoAAAASAAoAAAABAAoAAAASAAkAAAABAAoAAAASAAgAAAABAAoAAAASAAcAAAABAAoAAAASAAYAAAABAAoAAAASAAUAAAABAAoAAAATAAUAAAABAAoAAAATAAYAAAABAAoAAAATAAcAAAABAAoAAAATAAgAAAABAAoAAAATAAkAAAABAAoAAAAUAAkAAAABAAoAAAAUAAgAAAABAAoAAAAUAAcAAAABAAoAAAAUAAYAAAABAAoAAAAUAAUAAAABAAoAAAAVAAUAAAABAAoAAAAVAAYAAAABAAoAAAAVAAcAAAABAAoAAAAVAAgAAAABAAoAAAAWAAgAAAABAAoAAAAWAAcAAAABAAoAAAAWAAYAAAABAAoAAAAWAAUAAAABAAoAAAAXAAUAAAABAAoAAAAXAAYAAAABAAoAAAAXAAcAAAABAAoAAAAXAAgAAAABAAoAAAAYAAgAAAABAAoAAAAYAAcAAAABAAoAAAAYAAYAAAABAAoAAAAYAAUAAAABAAoAAAAZAAUAAAABAAoAAAAZAAYAAAABAAoAAAAZAAcAAAABAAoAAAAZAAgAAAABAAoAAAAaAAgAAAABAAoAAAAaAAcAAAABAAoAAAAaAAYAAAABAAoAAAAaAAUAAAABAAoAAAAbAAUAAAABAAoAAAAbAAYAAAABAAoAAAAbAAcAAAABAAoAAAAbAAgAAAABAAoAAAAcAAgAAAABAAoAAAAcAAcAAAABAAoAAAAcAAYAAAABAAoAAAAcAAUAAAABAAoAAAAdAAUAAAABAAoAAAAdAAYAAAABAAoAAAAdAAcAAAABAAoAAAAdAAgAAAABAAoAAAAdAAkAAAABAAoAAAAeAAkAAAABAAoAAAAeAAgAAAABAAoAAAAeAAcAAAABAAoAAAAeAAYAAAABAAoAAAAeAAUAAAABAAoAAAAfAAUAAAABAAoAAAAfAAYAAAABAAoAAAAfAAcAAAABAAoAAAAfAAgAAAABAAoAAAAfAAkAAAABAAoAAAAfAAoAAAABAAoAAAAeAAoAAAABAAoAAAAeAAsAAAABAAoAAAAfAAsAAAABAAoAAAAfAAwAAAABAAoAAAAfAA0AAAABAAoAAAAgAA0AAAABAAoAAAAgAAwAAAABAAoAAAAgAAsAAAABAAoAAAAgAAoAAAABAAoAAAAgAAkAAAABAAoAAAAgAAgAAAABAAoAAAAgAAcAAAABAAoAAAAgAAYAAAABAAoAAAAgAAUAAAABAAoAAAAhAAUAAAABAAoAAAAhAAYAAAABAAoAAAAhAAcAAAABAAoAAAAhAAgAAAABAAoAAAAhAAkAAAABAAoAAAAhAAoAAAABAAoAAAAhAAsAAAABAAoAAAAhAAwAAAABAAoAAAAhAA0AAAABAAoAAAAhAA4AAAABAAoAAAAgAA4AAAABAAoAAAAgAA8AAAABAAoAAAAgABAAAAABAAoAAAAgABEAAAABAAoAAAAgABIAAAABAAoAAAAgABMAAAABAAoAAAAgABQAAAABAAoAAAAfABQAAAABAAoAAAAeABQAAAABAAoAAAAeABMAAAABAAoAAAAeABIAAAABAAoAAAAeABEAAAABAAoAAAAdABEAAAABAAoAAAAdABIAAAABAAoAAAAcABIAAAABAAoAAAAbABIAAAABAAoAAAAbABMAAAABAAoAAAAaABMAAAABAAoAAAAaABQAAAABAAoAAAAZABQAAAABAAoAAAAYABQAAAABAAoAAAAXABQAAAABAAoAAAAWABQAAAABAAoAAAAVABQAAAABAAoAAAAUABQAAAABAAoAAAATABQAAAABAAoAAAASABQAAAABAAoAAAARABQAAAABAAoAAAARABMAAAABAAoAAAAQABMAAAABAAoAAAAPABMAAAABAAoAAAAOABMAAAABAAoAAAANABMAAAABAAoAAAAMABMAAAABAAoAAAALABMAAAABAAoAAAAKABMAAAABAAoAAAAKABIAAAABAAoAAAAJABIAAAABAAoAAAAJABMAAAABAAoAAAAJABQAAAABAAoAAAAJABUAAAABAAoAAAAJABYAAAABAAoAAAAJABcAAAABAAoAAAAKABcAAAABAAoAAAAKABYAAAABAAoAAAAKABUAAAABAAoAAAAKABQAAAABAAoAAAALABQAAAABAAoAAAALABUAAAABAAoAAAALABYAAAABAAoAAAALABcAAAABAAoAAAAMABcAAAABAAoAAAAMABYAAAABAAoAAAAMABUAAAABAAoAAAAMABQAAAABAAoAAAANABQAAAABAAoAAAANABUAAAABAAoAAAANABYAAAABAAoAAAANABcAAAABAAoAAAAOABcAAAABAAoAAAAOABYAAAABAAoAAAAOABUAAAABAAoAAAAOABQAAAABAAoAAAAPABQAAAABAAoAAAAPABUAAAABAAoAAAAPABYAAAABAAoAAAAPABcAAAABAAoAAAAQABcAAAABAAoAAAAQABYAAAABAAoAAAAQABUAAAABAAoAAAAQABQAAAABAAoAAAARABUAAAABAAoAAAARABYAAAABAAoAAAARABcAAAABAAoAAAASABcAAAABAAoAAAASABYAAAABAAoAAAASABUAAAABAAoAAAATABUAAAABAAoAAAATABYAAAABAAoAAAATABcAAAABAAoAAAAUABcAAAABAAoAAAAUABYAAAABAAoAAAAUABUAAAABAAoAAAAVABUAAAABAAoAAAAVABYAAAABAAoAAAAVABcAAAABAAoAAAAWABcAAAABAAoAAAAWABYAAAABAAoAAAAWABUAAAABAAoAAAAXABUAAAABAAoAAAAXABYAAAABAAoAAAAXABcAAAABAAoAAAAYABcAAAABAAoAAAAYABYAAAABAAoAAAAYABUAAAABAAoAAAAZABUAAAABAAoAAAAZABYAAAABAAoAAAAZABcAAAABAAoAAAAaABcAAAABAAoAAAAaABYAAAABAAoAAAAaABUAAAABAAoAAAAbABUAAAABAAoAAAAbABQAAAABAAoAAAAcABQAAAABAAoAAAAcABMAAAABAAoAAAAdABMAAAABAAoAAAAdABQAAAABAAoAAAAdABUAAAABAAoAAAAcABUAAAABAAoAAAAcABYAAAABAAoAAAAbABYAAAABAAoAAAAbABcAAAABAAoAAAAcABcAAAABAAoAAAAdABcAAAABAAoAAAAdABYAAAABAAoAAAAeABYAAAABAAoAAAAeABUAAAABAAoAAAAfABUAAAABAAoAAAAfABYAAAABAAoAAAAfABcAAAABAAoAAAAeABcAAAABAAoAAAAgABcAAAABAAoAAAAgABYAAAABAAoAAAAgABUAAAABAAoAAAAhABUAAAABAAoAAAAhABQAAAABAAoAAAAhABMAAAABAAoAAAAhABIAAAABAAoAAAAhABEAAAABAAoAAAAhABAAAAABAAoAAAAhAA8AAAABAAoAAAAiAA8AAAABAAoAAAAiAA4AAAABAAoAAAAiAA0AAAABAAoAAAAiAAwAAAABAAoAAAAiAAsAAAABAAoAAAAiAAoAAAABAAoAAAAiAAkAAAABAAoAAAAiAAgAAAABAAoAAAAiAAcAAAABAAoAAAAiAAYAAAABAAoAAAAiAAUAAAABAAoAAAAjAAUAAAABAAoAAAAjAAYAAAABAAoAAAAjAAcAAAABAAoAAAAjAAgAAAABAAoAAAAjAAkAAAABAAoAAAAjAAoAAAABAAoAAAAjAAsAAAABAAoAAAAjAAwAAAABAAoAAAAjAA0AAAABAAoAAAAjAA4AAAABAAoAAAAjAA8AAAABAAoAAAAjABAAAAABAAoAAAAiABAAAAABAAoAAAAiABEAAAABAAoAAAAiABIAAAABAAoAAAAiABMAAAABAAoAAAAiABQAAAABAAoAAAAiABUAAAABAAoAAAAiABYAAAABAAoAAAAhABYAAAABAAoAAAAhABcAAAABAAoAAAAiABcAAAABAAoAAAAjABcAAAABAAoAAAAjABYAAAABAAoAAAAjABUAAAABAAoAAAAjABQAAAABAAoAAAAjABMAAAABAAoAAAAjABIAAAABAAoAAAAjABEAAAABAAoAAAAkABEAAAABAAoAAAAkABAAAAABAAoAAAAkAA8AAAABAAoAAAAkAA4AAAABAAoAAAAkAA0AAAABAAoAAAAkAAwAAAABAAoAAAAkAAsAAAABAAoAAAAkAAoAAAABAAoAAAAkAAkAAAABAAoAAAAkAAgAAAABAAoAAAAkAAcAAAABAAoAAAAkAAYAAAABAAoAAAAkAAUAAAABAAoAAAAlAAUAAAABAAoAAAAlAAYAAAABAAoAAAAlAAcAAAABAAoAAAAlAAgAAAABAAoAAAAlAAkAAAABAAoAAAAlAAoAAAABAAoAAAAlAAsAAAABAAoAAAAlAAwAAAABAAoAAAAlAA0AAAABAAoAAAAlAA4AAAABAAoAAAAlAA8AAAABAAoAAAAlABAAAAABAAoAAAAlABEAAAABAAoAAAAlABIAAAABAAoAAAAkABIAAAABAAoAAAAkABMAAAABAAoAAAAkABQAAAABAAoAAAAkABUAAAABAAoAAAAkABYAAAABAAoAAAAkABcAAAABAAoAAAAlABcAAAABAAoAAAAlABYAAAABAAoAAAAlABUAAAABAAoAAAAlABQAAAABAAoAAAAlABMAAAABAAoAAAAmABMAAAABAAoAAAAmABIAAAABAAoAAAAmABEAAAABAAoAAAAmABAAAAABAAoAAAAmAA8AAAABAAoAAAAmAA4AAAABAAoAAAAmAA0AAAABAAoAAAAmAAwAAAABAAoAAAAmAAsAAAABAAoAAAAmAAoAAAABAAoAAAAmAAkAAAABAAoAAAAmAAgAAAABAAoAAAAmAAcAAAABAAoAAAAmAAYAAAABAAoAAAAmAAUAAAABAAoAAAAmABQAAAABAAoAAAAmABUAAAABAAoAAAAmABYAAAABAAoAAAAmABcAAAABAAoAAAAUAAsAAAABAAoAAAATAAsAAAABAAoAAAAVAAsAAAABAAoAAAAVAAoAAAABAAoAAAAWAAoAAAABAAoAAAAXAAoAAAABAAoAAAAYAAoAAAABAAoAAAAZAAoAAAABAAoAAAAaAAoAAAABAAoAAAAaAAsAAAABAAoAAAAaAAwAAAABAAoAAAAbAAsAAAABAAoAAAAbAAoAAAABAAoAAAAcAAoAAAABAAoAAAAcAA4AAAABAAoAAAAeAA8AAAABAAoAAAA=")
tile_set = SubResource("TileSet_c1pb6")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="ally_spawned" from="AllySpawnCanvas" to="." method="_on_canvas_ally_spawned"]
